Compiler/src/main/java/Testing/Tests/SyntacticTests/passing/startX.ru
/? Descripción: caso de prueba que se fija si se acepta un start con la inicializacion de una variable
/? Salida esperada:
/? CORRECTO: ANALISIS SINTACTICO
start { Str pepe ; }