Compiler/src/main/java/Testing/Tests/SyntacticTests/failing/structAfterStart.ru
/? Descripción: este caso de prueba se fija si el lenguaje tira error cuando
/? tiene un struct después de un start
/? Salida esperada: Error sintactico
start {}
struct Xd {}